fix: align title layout

--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,12 @@ input:focus {
   justify-content: center;
   align-items: center;
 
+  padding: 0.8em;
   font-family: "kaushanscript";
   background-color: rgba(255, 255, 255, 0.418);
+  font-size: 1.2em;
+
+  margin-top: 6em;
 }
 .title-layout img{
   height: 2em;
